--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.4",
     "drei": "^2.2.21",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.9.2",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
