--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.4",
+    "dotenv": "^16.5.0",
     "drei": "^2.2.21",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.9.2",
@@ -22,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.293",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.8.1"
   },
